Setup "core-kafka" as maven submodule.